# clickhouse-migrate

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yml  pyproject.toml  setup.py  test_requirements  tox.ini
.github/workflows/: workflow.yaml
clickhouse_migrate/: __init__.py  __main__.py  manage.py  validation.py
clickhouse_migrate/common/: db.py  meta.py
clickhouse_migrate/common/exceptions/: config.py  db.py
clickhouse_migrate/common/models/: base.py  db.py
clickhouse_migrate/conf/: settings.py
clickhouse_migrate/interfaces/: repo.py  service.py
clickhouse_migrate/models/: migration.py
clickhouse_migrate/scripts/: main.py
tests/: clickhouse_migrate.ini  clickhouse_migrate_test.ini  conftest.py  docker-compose.yml  test_migrations.py  test_settings.py
